--- a/WDBC_Data_Analysis_2.ipynb
+++ b/WDBC_Data_Analysis_2.ipynb
@@ -5,7 +5,7 @@
    "id": "ca25833e",
    "metadata": {},
    "source": [
-    "# Wisconsin Diagnostic Breast Cancer (WDBC) Data Analysis - Q4"
+    "# Wisconsin Diagnostic Breast Cancer (WDBC) Data Analysis"
    ]
   },
   {
